--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -49,7 +49,7 @@
       </li>
     </ul><!--/.detail-nav-->
   	<!--product-container-->
-    <div class="col-md-10 col-md-offset-1 mf-product-content">
+    <div class="col-xs-12 col-md-10 col-md-offset-1 mf-product-content">
     	<div class="product-container">
         <!--product-info-block-->
         <div class="product-info-block mf-product-info-block">
@@ -94,143 +94,227 @@
                 <span class="slider-control slider-next"><i class="fa fa-angle-right"></i></span>
               </div>
             </div>  <!--./stage-wrap--> 
+
+            <!--product-detail-->
+            <div class="product-detail">
+              <div class="tab-content">
+                <div class="product-intro short-info" id="">
+                  <p>Đầm yếm New Look màu đen sở hữu kiểu dáng ôm vô cùng gợi cảm, tôn lên những đường cong quyến rũ của các cô nàng, kết hợp chất vải cao cấp mang đến cho các bạn gái cảm nhận thoải mái và năng động. </p>
+                  <ul style="list-style: square; line-height: 1">
+                    <li><p>Thành phần Polyester, Elastane</p></li>
+                    <li><p>Dáng ôm khoe triệt để đường cong cơ thể</p></li>
+                    <li><p>Thiết kế dáng đầm yếm năng động</p></li>
+                    <li><p>Hai túi xéo tiện dụng</p></li>
+                    <li><p> Sản xuất tại Ma-Rốc. Thương hiệu: Anh</p></li>
+                  </ul>
+                </div>
+
+                <div class="product-intro" id="product-des-1">
+                  <h2 class="title">Thông tin sản phẩm</h2>
+                  <p>Đầm yếm New Look màu đen sở hữu kiểu dáng ôm vô cùng gợi cảm, tôn lên những đường cong quyến rũ của các cô nàng, kết hợp chất vải cao cấp mang đến cho các bạn gái cảm nhận thoải mái và năng động. </p>
+                  <ul style="list-style: square; line-height: 1">
+                    <li><p>Thành phần Polyester, Elastane</p></li>
+                    <li><p>Dáng ôm khoe triệt để đường cong cơ thể</p></li>
+                    <li><p>Thiết kế dáng đầm yếm năng động</p></li>
+                    <li><p>Hai túi xéo tiện dụng</p></li>
+                    <li><p> Sản xuất tại Ma-Rốc. Thương hiệu: Anh</p></li>
+                  </ul>
+                  <p style="text-align: center;">
+                    <img src="assets/images/upload/product/product-10.jpg" alt="myface">
+                  </p>
+                  <p style="text-align: center">Được may từ chất liệu tơ tằm cao cấp</p>
+                  <p style="text-align: center;">
+                    <img src="assets/images/upload/product/product-10.jpg" alt="myface">
+                  </p>
+                </div>
+
+                <div class="product-intro" id="product-des-2">
+                  <h2 class="title">Thông số sản phẩm</h2>
+                  <table class="table table-bordered table-label">
+                    <tbody>
+                      <tr class="row-info">
+                        <td><strong>Độ cồn</strong></td>
+                        <td>5%</td>
+                      </tr>
+                      <tr class="row-info">
+                        <td><strong>Xuất xứ</strong></td>
+                        <td>Việt Nam</td>
+                      </tr>
+                      <tr class="row-info">
+                        <td><strong>Hướng dẫn sử dụng</strong></td>
+                        <td>Uống trực tiếp, ngon hơn khi uống lạnh</td>
+                      </tr>
+                      <tr class="row-info">
+                        <td><strong>Hướng dẫn bảo quản</strong></td>
+                        <td>Nơi khô ráo, thoáng mát, tránh ánh nắng mặt trời và tránh bị đông đá</td>
+                      </tr>
+                      <tr class="row-info">
+                        <td><strong>Quy cách đóng gói</strong></td>
+                        <td>24 lon/thùng</td>
+                      </tr>
+                      <tr class="row-info">
+                        <td><strong>Thành phần nguyên liệu</strong></td>
+                        <td>Nước, mạch nha, gạo, hoa bia</td>
+                      </tr>
+                      <tr class="row-info">
+                        <td><strong>Hạn sử dụng</strong></td>
+                        <td>12 tháng</td>
+                      </tr>
+                      <tr class="row-info">
+                        <td><strong>Dung tích</strong></td>
+                        <td>330 (ml)</td>
+                      </tr>
+                    </tbody>
+                  </table><!-- /.table -->
+                </div>    
+              </div>
+              <div class="block text-center">
+                <button class="btn btn-primary btn-like-action"><span class="icon"></span></button>
+              </div>
+            </div><!--product-detail-->
+
+            <!--facebook-comment-->
+            <div class="alert alert-box">
+              <label>Hey! đừng đi vội</label>
+              <p>Sản phẩm, chất lượng, dịch vụ Shop có làm bạn hài lòng không? Hãy để lại bình luận, đánh giá để mọi người biết nhé.</p>
+            </div>
+            <div class="fb-conmment" style="width: 100%">
+              <img src="assets/images/upload/fb/fb-2.jpg" alt="myface">
+            </div><!--/.facebook-comment-->
           </div><!--./products-gallery-->
+
           <!--product-info-->
           <div class="col-xs-5 product-info">
             <div class="info-block">
               <label class="block-title">Giao hàng đến:</label>
               <p class="block-text">Toàn quốc, TP.HCM, Hà Nội, Tuyên Quang, lào Cai...</p>
             </div>
-            <div class="product-header">
-              <div class="product-property">
-                <div class="item-property color-property">
-                  <div class="item-property-label">
-                    <span>Màu sắc:</span>
-                  </div>
-                  <ul class="item-property-values">
-                    <li class="property-select active">
-                      <a class="" href="#"><span class="text">Xanh dương</span></a>
-                    </li>
-                    <li class="property-select">
-                      <a class="" href="#"><span class="text">Xanh lá</span></a>
-                    </li>
-                    <li class="property-select">
-                      <a class="" href="#"><span class="text">Xanh cổ vịt</span></a>
-                    </li>
-                  </ul>
+            <!--price-block-->
+            <div class="info-block price-block">
+              <span class="price current">235.000<sup>đ</sup></span>
+              <span class="price original">325.000<sup>đ</sup></span> 
+            </div><!--/.price-block-->
+            <!--product-property-->
+            <div class="product-property mf-product-property">
+              <!--color-property-->
+              <div class="info-block item-property color-property">
+                <div class="item-property-label">
+                  <span>Màu sắc:</span>
                 </div>
-                <div class="item-property size-property">
-                  <div class="item-property-label">
-                    <span>Kích thước:</span>
-                  </div>
-                  <ul class="item-property-values">
-                    <li class="property-select active">
-                      <a class="" href="#"><span class="text">XS</span></a>
-                    </li>
-                    <li class="property-select">
-                      <a class="" href="#"><span class="text">M</span></a>
-                    </li>
-                    <li class="property-select">
-                      <a class="" href="#"><span class="text">XL</span></a>
-                    </li>
-                  </ul>
+                <ul class="item-property-values">
+                  <li class="property-select active">
+                    <a class="" href="#"><span class="text">Xanh dương</span></a>
+                  </li>
+                  <li class="property-select">
+                    <a class="" href="#"><span class="text">Xanh lá</span></a>
+                  </li>
+                  <li class="property-select">
+                    <a class="" href="#"><span class="text">Xanh cổ vịt</span></a>
+                  </li>
+                </ul>
+              </div><!--/.color-property-->
+              <!--size-property-->
+              <div class="info-block item-property size-property">
+                <div class="item-property-label">
+                  <span>Kích thước:</span>
                 </div>
-                <div class="item-property amount-property">
-                  <div class="item-property-label">
-                    <span>Số lượng:</span>
-                  </div>
-                  <div class="item-property-values">
-                    <select class="selectpicker select-amount" data-size="5">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
-                      <option>6</option>
-                      <option>7</option>
-                      <option>8</option>
-                      <option>9</option>
-                      <option>10</option>
-                    </select>
-                  </div>
+                <ul class="item-property-values">
+                  <li class="property-select active">
+                    <a class="" href="#"><span class="text">XS</span></a>
+                  </li>
+                  <li class="property-select">
+                    <a class="" href="#"><span class="text">M</span></a>
+                  </li>
+                  <li class="property-select">
+                    <a class="" href="#"><span class="text">XL</span></a>
+                  </li>
+                </ul>
+              </div><!--/.size-property-->
+              <!--amount-property-->
+              <div class="item-property amount-property">
+                <div class="item-property-label">
+                  <span>Số lượng:</span>
                 </div>
+                <div class="item-property-values">
+                  <select class="selectpicker select-amount" data-size="5">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                  </select>
+                </div>
+              </div><!--/.amount-property-->
+            </div><!--/.product-property-->
+
+            <div class="info-block add-cart-block">
+              <button class="btn btn-primary btn-buy-now"><i class="fa fa-shopping-cart"></i><span>Cho vào giỏ hàng</span><br><span>Nhận hàng - Trả tiền sau</span></button>
+              <button class="btn btn-default btn-add-cart"><i class="fa fa-shopping-cart"></i><span>Thêm vào giỏ</span></button>
+            </div>
+
+            <!--adr-->
+            <div class="info-block adr">
+              <label class="block-title">Sản phẩm tương tự của Shop</label>
+              <div class="row shop-list-row">
+                <ol class="m-product-list">
+                  {% for x in [1,2,3,4] %}  
+                  <!--m-product-item-->
+                  <li class="col-xs-6 m-product-item">
+                    <div class="m-product-inner">
+                      <div class="m-product-info">
+                        <a class="m-product-link" href="myface-product-detail.html">
+                          <figure class="m-product-img">
+                            <img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">    
+                          </figure>
+                          <div class="m-product-hover">
+                            <h2 class="m-product-name">Áo thun Jeanswest bêđê hồng</h2>
+                            <p class="m-product-description">Áo thun jeanswest màu trắng hồng bêdê. Kiểu dáng đẹp, ôm bó sát người...</p>
+                            <div class="price-block">
+                              <span class="price current">235.000<sup>đ</sup></span>
+                              <span class="price original">325.000<sup>đ</sup></span> 
+                            </div>
+                          </div>  
+                        </a>
+                      </div>
+                    </div>
+                  </li><!--/.m-product-item-->
+                  {% endfor %}
+                </ol>
               </div>
-              <div class="block">
-                <a class="btn btn-primary btn-action" href="#"><i class="fa fa-shopping-cart"></i><span>Cho vào giỏ hàng</span></a>
-              </div>
+            </div><!--/.adr-->
+            <!--product-property-->
+            <div class="info-block mf-product-property">
+              <!--tags-property-->
+              <div class="item-property tags-property">
+                <div class="item-property-label">
+                  <span>Tags</span>
+                </div>
+                <ul class="item-property-values">
+                  <li class="property-select">
+                    <a class="" href="#"><span class="text">Áo đầm</span></a>
+                  </li>
+                  <li class="property-select">
+                    <a class="" href="#"><span class="text">Áo mùa đông</span></a>
+                  </li>
+                </ul>
+              </div><!--/.color-property-->
+            </div><!--/.product-property-->
+            <div class="info-block">
+              <label class="block-title">Mua hàng an toàn</label>
+              <p class="block-text">Tìm hiểu kỹ càng thông tin hàng hóa, Shop bán hàng trước khi đặt hàng.
+              Xem kỹ phí vận chuyển, đóng gói, tổng số tiền phải trả. Liên hệ Shop khi có vấn đề chưa rõ.
+              Kiểm tra hàng hóa cẩn thận khi nhận hàng.
+              Không nhận hàng nếu nghi ngờ hàng giả, kém chất lượng, không giống mô tả trên Web.
+              Thông báo qua số hotline: 1900 636 798 cho đội ngũ CSKH ngay khi gặp các sự cố về đơn hàng, hàng hóa.</p>
+              <a class="readmore" href="#">Xem thêm khuyến cáo mua hàng?</a>
             </div>
           </div><!--./product-info-->
         </div><!--/.product-info-block-->
-        <!--product-description-->
-        <div class="col-md-8">
-          <div class="product-detail">
-            <div class="tab-content">
-              <div class="product-intro" id="product-des-1">
-                <p>Sử dụng chất liệu cao cấp cùng kiểu dáng hiện đại, áo sơ mi slim fit vạt bầu thuộc thương hiệu G2000 đem lại nét thanh lịch, sang trọng cho phái mạnh khi đi làm, đi họp hay tham gia các buổi gặp mặt quan trọng.</p>
-                <ul style="list-style: square; line-height: 1">
-                  <li><p>Vải màu đậm không giặt bằng xà bông có độ tẩy cao</p></li>
-                  <li><p>Nên lộn trái sản phẩm khi phơ</p></li>
-                  <li><p>Không phơi sản phẩm màu ở nơi nắng gắt</p></li>
-                  <li><p>Không ngâm hay giặt sản phẩm màu trắng chung với sản phẩm màu khác</p></li>
-                </ul>
-                <p style="text-align: center;">
-                  <img src="assets/images/upload/product/product-10.jpg" alt="myface">
-                </p>
-                <p style="text-align: center">Được may từ chất liệu tơ tằm cao cấp</p>
-                <p style="text-align: center;">
-                  <img src="assets/images/upload/product/product-10.jpg" alt="myface">
-                </p>
-              </div>
-              <div class="product-intro" id="product-des-2">
-                <h2 class="title">Thông số sản phẩm</h2>
-                <table class="table table-bordered table-label">
-                  <tbody>
-                    <tr class="row-info">
-                      <td><strong>Độ cồn</strong></td>
-                      <td>5%</td>
-                    </tr>
-                    <tr class="row-info">
-                      <td><strong>Xuất xứ</strong></td>
-                      <td>Việt Nam</td>
-                    </tr>
-                    <tr class="row-info">
-                      <td><strong>Hướng dẫn sử dụng</strong></td>
-                      <td>Uống trực tiếp, ngon hơn khi uống lạnh</td>
-                    </tr>
-                    <tr class="row-info">
-                      <td><strong>Hướng dẫn bảo quản</strong></td>
-                      <td>Nơi khô ráo, thoáng mát, tránh ánh nắng mặt trời và tránh bị đông đá</td>
-                    </tr>
-                    <tr class="row-info">
-                      <td><strong>Quy cách đóng gói</strong></td>
-                      <td>24 lon/thùng</td>
-                    </tr>
-                    <tr class="row-info">
-                      <td><strong>Thành phần nguyên liệu</strong></td>
-                      <td>Nước, mạch nha, gạo, hoa bia</td>
-                    </tr>
-                    <tr class="row-info">
-                      <td><strong>Hạn sử dụng</strong></td>
-                      <td>12 tháng</td>
-                    </tr>
-                    <tr class="row-info">
-                      <td><strong>Dung tích</strong></td>
-                      <td>330 (ml)</td>
-                    </tr>
-                  </tbody>
-                </table><!-- /.table -->
-              </div>    
-            </div>
-            <div class="block text-center">
-              <a class="btn btn-primary btn-action" href="#"><span>action buttons</span></a>
-            </div>
-          </div><!--./product-description-->
-
-          <!--facebook-comment-->
-          <div class="fb-conmment" style="width: 100%">
-            <img src="assets/images/upload/fb/fb-2.jpg" alt="myface">
-          </div><!--/.facebook-comment-->
-        </div>
     	</div><!--/.product-container-->
     </div>
   </div>
