--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -282,6 +282,27 @@ img {
 .btn-back:active {
   color: #ff5722;
 }
+.btn-buy-now,
+.btn-add-cart {
+  width: 220px;
+  height: 50px;
+  border-radius: 30px;
+}
+.btn-add-cart {
+  width: 110px;
+}
+.btn-like-action {
+  min-width: 0;
+  width: 85px;
+  height: 85px;
+  border-radius: 100%;
+}
+.btn-like-action .icon {
+  width: 100%;
+  height: 100%;
+  display: block;
+  background: url(../images/icons/like.png) no-repeat center center;
+}
 /*
  * Component: Form
  * ---------------
@@ -2822,6 +2843,10 @@ footer.main-footer .f-bct > span.bct {
 .mf-product-info-block .product-gallery .thumnail .items .item.active {
   border-color: #ff5722;
 }
+.mf-product-info-block .product-detail {
+  width: 100%;
+  float: left;
+}
 .mf-product-info-block .info-block {
   padding: 10px 0;
   border-bottom: 1px solid #dfdfdf;
@@ -2841,6 +2866,33 @@ footer.main-footer .f-bct > span.bct {
 .block-text {
   margin-bottom: 0;
 }
+.short-info {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #dfdfdf;
+}
+.mf-product-property {
+  border-color: transparent;
+  margin: 0;
+  padding: 0;
+}
+.mf-product-property .item-property {
+  display: block;
+}
+.mf-product-property .item-property .item-property-label {
+  width: 100%;
+  display: block;
+  font-weight: 600;
+}
+.mf-product-property .item-property .item-property-values .property-select a {
+  border-color: #dfdfdf;
+  color: #212121;
+}
+.mf-product-property .item-property .item-property-values .property-select.active a,
+.mf-product-property .item-property .item-property-values .property-select:hover a {
+  background-color: #fff;
+  border-color: #ff5722;
+  color: #212121;
+}
 .product-gallery-header {
   width: 100%;
   float: left;
@@ -2855,6 +2907,12 @@ footer.main-footer .f-bct > span.bct {
 .product-date {
   display: inline-block;
   color: #727272;
+}
+.alert-box {
+  width: 100%;
+  float: left;
+  border: 1px solid #dfdfdf;
+  margin-top: 20px;
 }
 .detail-nav {
   list-style: none;
@@ -3039,6 +3097,7 @@ select.selectpicker {
   margin: 0;
   border-radius: 0;
   box-shadow: none;
+  overflow-x: hidden;
 }
 .bootstrap-select.btn-group .dropdown-menu li {
   position: relative;
