--- a/myface-onface-html/src/assets/less/style/buttons.less
+++ b/myface-onface-html/src/assets/less/style/buttons.less
@@ -147,5 +147,26 @@
     color: @primary-color;
   }
 }
+.btn-buy-now,
+.btn-add-cart {
+  width: 220px;
+  height: 50px;
+  border-radius: 30px;
+}
+.btn-add-cart {
+  width: 110px;
+}
+.btn-like-action {
+  min-width: 0;
+  width: 85px;
+  height: 85px;
+  border-radius: 100%;
+  .icon {
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: url(../images/icons/like.png) no-repeat center center;
+  }
+}
 
 
