--- a/myface-onface-html/src/assets/less/style/plugin/bootstrap-select.less
+++ b/myface-onface-html/src/assets/less/style/plugin/bootstrap-select.less
@@ -168,6 +168,7 @@ select.selectpicker {
       margin: 0;
       border-radius: 0;
       box-shadow: none;
+      overflow-x: hidden;
     }
 
     li {
