--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -306,11 +306,11 @@
             </div><!--/.product-property-->
             <div class="info-block">
               <label class="block-title">Mua hàng an toàn</label>
-              <p class="block-text">Tìm hiểu kỹ càng thông tin hàng hóa, Shop bán hàng trước khi đặt hàng.
-              Xem kỹ phí vận chuyển, đóng gói, tổng số tiền phải trả. Liên hệ Shop khi có vấn đề chưa rõ.
-              Kiểm tra hàng hóa cẩn thận khi nhận hàng.
-              Không nhận hàng nếu nghi ngờ hàng giả, kém chất lượng, không giống mô tả trên Web.
-              Thông báo qua số hotline: 1900 636 798 cho đội ngũ CSKH ngay khi gặp các sự cố về đơn hàng, hàng hóa.</p>
+              <p class="">Tìm hiểu kỹ càng thông tin hàng hóa, Shop bán hàng trước khi đặt hàng.</p>
+              <p class="">Xem kỹ phí vận chuyển, đóng gói, tổng số tiền phải trả. Liên hệ Shop khi có vấn đề chưa rõ.</p>
+              <p class="">Kiểm tra hàng hóa cẩn thận khi nhận hàng.</p>
+              <p class="">Không nhận hàng nếu nghi ngờ hàng giả, kém chất lượng, không giống mô tả trên Web.</p>
+              <p class="">Thông báo qua số hotline: 1900 636 798 cho đội ngũ CSKH ngay khi gặp các sự cố về đơn hàng, hàng hóa.</p>
               <a class="readmore" href="#">Xem thêm khuyến cáo mua hàng?</a>
             </div>
           </div><!--./product-info-->
