--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -168,9 +168,33 @@
                   </table><!-- /.table -->
                 </div>    
               </div>
-              <div class="block text-center">
-                <button class="btn btn-primary btn-like-action"><span class="icon"></span></button>
-              </div>
+
+              <!--like-group-wrap-->
+              <div class="like-group-wrap">
+                <!--lightbox-wrap-->
+                <div class="lightbox-wrap" style="width: 100%; top: -90px">
+                  <!--add phone number-->
+                  <div class="add-number-to-buy">
+                    <div class="input-group send-group">
+                      <input type="text" class="form-control" placeholder="Nhập số điện thoại của bạn">
+                      <span class="input-group-btn">
+                        <button class="btn btn-primary btn-buy-submit" type="button"><span class="icon"></span>Đặt mua<span class="icon"></span></button>
+                      </span>
+                    </div>
+                    <div class="close-back">
+                      <a class="close-btn" href="#"></a><!--/.close-back-->
+                    </div>
+                  </div><!--./add phone number-->
+
+                  <!--add phone number-->
+                  <div class="add-number-to-buy" style="width: 100%; margin-top: 10px;">
+                  </div><!--./add phone number-->
+                </div><!--/.lightbox-wrap-->
+
+                <div class="block text-center">
+                  <button class="btn btn-primary btn-like-action"><span class="icon"></span></button>
+                </div>
+              </div><!--/.like-group-wrap-->
             </div><!--product-detail-->
 
             <!--facebook-comment-->
@@ -192,6 +216,7 @@
             <!--price-block-->
             <div class="info-block price-block">
               <span class="price current">235.000<sup>đ</sup></span>
+              <span class="price shipping">(Miễn phí vận chuyển)</span>
               <span class="price original">325.000<sup>đ</sup></span> 
             </div><!--/.price-block-->
             <!--product-property-->
@@ -253,8 +278,24 @@
             </div><!--/.product-property-->
 
             <div class="info-block add-cart-block">
-              <button class="btn btn-primary btn-buy-now"><i class="fa fa-shopping-cart"></i><span>Cho vào giỏ hàng</span><br><span>Nhận hàng - Trả tiền sau</span></button>
-              <button class="btn btn-default btn-add-cart"><i class="fa fa-shopping-cart"></i><span>Thêm vào giỏ</span></button>
+              <button class="btn btn-primary btn-buy-now"><span class="icon"></span><span class="lr-text">Đặt mua</span><br><span class="sc-text">Nhận hàng - Trả tiền sau</span></button>
+              <!--lightbox-wrap-->
+              <div class="lightbox-wrap">
+                <!--add phone number-->
+                <div class="add-number-to-buy">
+                  <div class="input-group send-group">
+                    <input type="text" class="form-control" placeholder="Nhập số điện thoại của bạn">
+                    <span class="input-group-btn">
+                      <button class="btn btn-primary btn-buy-submit" type="button"><span class="icon"></span>Đặt mua<span class="icon"></span></button>
+                    </span>
+                  </div>
+                  <div class="close-back">
+                    <a class="close-btn" href="#"></a><!--/.close-back-->
+                  </div>
+                </div><!--./add phone number-->
+              </div><!--/.lightbox-wrap-->
+
+              <button class="btn btn-default btn-add-cart"><span class="icon"></span><span class="lr-text">Thêm vào giỏ</span></button>
             </div>
 
             <!--adr-->
